:boom: add new feature route
